--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "acorn-dynamic-import": "^3.0.0",
     "core-js": "^2.5.4",
+    "decode-uri-component": "^0.2.0",
+    "is-plain-object": "^2.0.4",
     "rxjs": "~6.2.0",
+    "set-value": "^3.0.0",
+    "webpack-dev-middleware": "^3.3.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
